# grpc_project

./: CMakeLists.txt  authorization.proto  example.proto  generationProto.sh  grpc_client.cpp  grpc_server.cpp
